--- a/index.html
+++ b/index.html
@@ -9,25 +9,82 @@
     <title>Character Confusion</title>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="characterslab">
-            <!-- <div class="circlebox"> -->
-                <div class="maincharacter">
-                    <h1>哀</h1>
-                </div>
-                <div class="infoandlist">
-                    <div class="info">
-                        <p>ai1</p>
-                        <p >Sorrow</p>
-                    </div>
-                    <div class="list">
-                        <p>哀 衷 衰</p>
-                    </div>
-                </div>
-            <!-- </div> -->
+<div class="wrapper"  id="wrapper">
+                        <div class="characterslab" id="哀" >
+                                <div class="maincharacter">
+                                    <h1>哀</h1>
+                                </div>
+                                <div class="infoandlist">
+                                    <div class="info">
+                                        <p class="pmain">ai1</p>
+                                        <p class="pmain">Sorrow</p>
+                                    </div>
+                                    <div class="list">
+                                        <p class="pmain">哀 衷 衰</p>
+                                    </div>
+                                </div>
+                        </div>
+        <div class="confusingslabcontainer">
+                        <div class="confusingslab">
+                                    <div class="maincharacterB">
+                                            <h1 class="h1b">哀</h1>
+                                    </div>
+                                    <div class="infoB">
+                                            <p>ai1</p>
+                                            <p >Sorrow</p>
+                                    </div>
+                                    <div class="radicals">
+                                                    <div class="rad1">
+                                                        <p class="r">衣</p><p class="p">yi1</p><p class="m">clothes</p>
+                                                    </div>
+                                                    <div class="rad1">
+                                                        <p class="r">口</p><p class="p">kou3</p><p class="m">mouth</p>
+                                                    </div>
+                                    </div>
+                        </div>
+
+                        <div class="confusingslab">
+                                <div class="maincharacterB">
+                                        <h1 class="h1b">衰</h1>
+                                </div>
+                                <div class="infoB">
+                                        <p>shuai1</p>
+                                        <p >Decrease</p>
+                                </div>
+                                <div class="radicals">
+                                        <div class="rad1">
+                                            <p class="r">衣</p><p class="p">yi1</p><p class="m">clothes</p>
+                                        </div>
+                                        <div class="rad1">
+                                            <p class="r">口</p><p class="p">kou3</p><p class="m">mouth</p>
+                                        </div>
+                                        <div class="rad1">
+                                            <p class="r">一</p><p class="p">yi1</p><p class="m">one</p>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="confusingslab">
+                                <div class="maincharacterB">
+                                        <h1 class="h1b">衷</h1>
+                                </div>
+                                <div class="infoB">
+                                        <p>zhong1</p>
+                                        <p >Inner Feelings</p>
+                                </div>
+                                <div class="radicals">
+                                        <div class="rad1">
+                                            <p class="r">衣</p><p class="p">yi1</p><p class="m">clothes</p>
+                                        </div>
+                                        <div class="rad1">
+                                            <p class="r">口</p><p class="p">kou3</p><p class="m">mouth</p>
+                                        </div>
+                                        <div class="rad1">
+                                            <p class="r">丨</p><p class="p">gun3</p><p class="m">line</p>
+                                        </div>
+                                </div>
+                        </div>
         </div>
 
-
-    </div>
+</div>
 </body>
 </html>
